tests/react_imports/react_imports.exp
Error: commonjs-pascal.js:4
  4: (React.Component: number); // Error
      ^^^^^^^^^^^^^^^ statics of `React.Component`. This type is incompatible with
  4: (React.Component: number); // Error
                       ^^^^^^ number

Error: commonjs-pascal.js:6
  6: ({}: React.Node); // Error
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error
            ^^ object literal

Error: commonjs-pascal.js:7
  7: (null: React.Missing); // Error
            ^^^^^^^^^^^^^ Missing. Property not found in
  1: const React = require('React');
                   ^^^^^^^^^^^^^^^^ module `react`

Error: commonjs.js:4
  4: (React.Component: number); // Error
      ^^^^^^^^^^^^^^^ statics of `React.Component`. This type is incompatible with
  4: (React.Component: number); // Error
                       ^^^^^^ number

Error: commonjs.js:6
  6: ({}: React.Node); // Error
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error
            ^^ object literal

Error: commonjs.js:7
  7: (null: React.Missing); // Error
            ^^^^^^^^^^^^^ Missing. Property not found in
  1: const React = require('react');
                   ^^^^^^^^^^^^^^^^ module `react`

Error: es-default-pascal.js:4
  4: (React.Component: number); // Error
      ^^^^^^^^^^^^^^^ statics of `React.Component`. This type is incompatible with
  4: (React.Component: number); // Error
                       ^^^^^^ number

Error: es-default-pascal.js:6
  6: ({}: React.Node); // Error: Not in default export.
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error: Not in default export.
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error: Not in default export.
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error: Not in default export.
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error: Not in default export.
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error: Not in default export.
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error: Not in default export.
            ^^ object literal

Error: es-default-pascal.js:7
  7: (null: React.Missing); // Error: Not in default export.
            ^^^^^^^^^^^^^ Missing. Property not found in
261:   declare module.exports: $Exports<'react'>;
                               ^^^^^^^^^^^^^^^^^ module `react`. See lib: <BUILTINS>/react.js:261

Error: es-default.js:4
  4: (React.Component: number); // Error
      ^^^^^^^^^^^^^^^ statics of `React.Component`. This type is incompatible with
  4: (React.Component: number); // Error
                       ^^^^^^ number

Error: es-default.js:5
  5: ('Hello, world!': React.Node); // Error: Not in default export.
                       ^^^^^^^^^^ Node. Property not found in
                              v-
241:   declare export default {|
242:     +DOM: typeof DOM,
243:     +PropTypes: typeof PropTypes,
...:
255:   |};
       -^ object type. See lib: <BUILTINS>/react.js:241

Error: es-default.js:6
  6: ({}: React.Node); // Error: Not in default export.
          ^^^^^^^^^^ Node. Property not found in
                              v-
241:   declare export default {|
242:     +DOM: typeof DOM,
243:     +PropTypes: typeof PropTypes,
...:
255:   |};
       -^ object type. See lib: <BUILTINS>/react.js:241

Error: es-default.js:7
  7: (null: React.Missing); // Error: Not in default export.
            ^^^^^^^^^^^^^ Missing. Property not found in
                              v-
241:   declare export default {|
242:     +DOM: typeof DOM,
243:     +PropTypes: typeof PropTypes,
...:
255:   |};
       -^ object type. See lib: <BUILTINS>/react.js:241

Error: es-namespace-pascal.js:4
  4: (React.Component: number); // Error
      ^^^^^^^^^^^^^^^ statics of `React.Component`. This type is incompatible with
  4: (React.Component: number); // Error
                       ^^^^^^ number

Error: es-namespace-pascal.js:6
  6: ({}: React.Node); // Error
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error
            ^^ object literal

Error: es-namespace-pascal.js:7
  7: (null: React.Missing); // Error
            ^^^^^^^^^^^^^ Missing. Property not found in
  1: import * as React from 'React';
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ module `React`

Error: es-namespace.js:4
  4: (React.Component: number); // Error
      ^^^^^^^^^^^^^^^ statics of `React.Component`. This type is incompatible with
  4: (React.Component: number); // Error
                       ^^^^^^ number

Error: es-namespace.js:6
  6: ({}: React.Node); // Error
      ^^ object literal. This type is incompatible with
  6: ({}: React.Node); // Error
          ^^^^^^^^^^ union: undefined | null | boolean | number | string | `React.Element` | `React.Portal` | `Iterable`
  Member 6:
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   18:   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ React.Element. See lib: <BUILTINS>/react.js:18
    Property `key` is incompatible:
       18:   | React$Element<any>
               ^^^^^^^^^^^^^^^^^^ property `key`. Property not found in. See lib: <BUILTINS>/react.js:18
        6: ({}: React.Node); // Error
            ^^ object literal
  Member 7:
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   19:   | React$Portal
           ^^^^^^^^^^^^ React.Portal. See lib: <BUILTINS>/react.js:19
  Member 8:
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ Iterable. See lib: <BUILTINS>/react.js:20
  Error:
    6: ({}: React.Node); // Error
        ^^ object literal. This type is incompatible with
   20:   | Iterable<React$Node>;
           ^^^^^^^^^^^^^^^^^^^^ $Iterable. See lib: <BUILTINS>/react.js:20
    Property `@@iterator` is incompatible:
       20:   | Iterable<React$Node>;
               ^^^^^^^^^^^^^^^^^^^^ property `@@iterator` of `$Iterable`. Property not found in. See lib: <BUILTINS>/react.js:20
        6: ({}: React.Node); // Error
            ^^ object literal

Error: es-namespace.js:7
  7: (null: React.Missing); // Error
            ^^^^^^^^^^^^^ Missing. Property not found in
  1: import * as React from 'react';
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ module `react`


Found 19 errors
